change images names

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 }
 </style>
 
-<!-- ✅ سكشن فاخر بخلفية بيضاء + صور -->
+
 <section class="relative bg-white py-20">
   <div class="container mx-auto px-6">
     <!-- العنوان -->
@@ -441,10 +441,10 @@
         <!-- الصور -->
       <div class="grid grid-cols-2 gap-6">
         <div class="rounded-2xl overflow-hidden shadow-lg transform hover:scale-105 transition duration-500">
-          <img src="./ass/img/istockphoto-1149597075-612x612.jpg" alt="اعلان فاخر" class="w-full h-full object-cover">
+          <img src="./ass/img/hero-1.jpg" alt="اعلان فاخر" class="w-full h-full object-cover">
         </div>
         <div class="rounded-2xl overflow-hidden shadow-lg transform hover:scale-105 transition duration-500 mt-10">
-          <img src="./ass/img/istockphoto-688787498-612x612.jpg" alt="تصميم براند" class="w-full h-full object-cover">
+          <img src="./ass/img/hero-3.jpg" alt="تصميم براند" class="w-full h-full object-cover">
         </div>
       </div>
     </div>
@@ -471,7 +471,7 @@
       
       <!-- Card 1 -->
       <div class="group relative overflow-hidden rounded-2xl shadow-lg transform transition-all duration-500 hover:scale-105 hover:shadow-2xl">
-        <img src="./ass/img/istockphoto-1149597075-612x612.jpg" alt="تصميم لوجو" 
+        <img src="./ass/img/Logo-design.jpg" alt="تصميم لوجو" 
              class="w-full h-64 object-cover transition-all duration-500 group-hover:scale-110 ">
          <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-500"></div>
         <!-- Overlay with subtle blur effect -->
@@ -494,7 +494,7 @@
 
       <!-- Card 2 -->
       <div class="group relative overflow-hidden rounded-2xl shadow-lg transform transition-all duration-500 hover:scale-105 hover:shadow-2xl">
-        <img src="./ass/img/pexels-pixabay-210126.jpg" alt="إعلان دعائي" 
+        <img src="./ass/img/Advertisement.jpg" alt="إعلان دعائي" 
              class="w-full h-64 object-cover transition-all duration-500 group-hover:scale-110">
         <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-500"></div>
         <div class="absolute inset-0 bg-black/0 group-hover:bg-black/20 backdrop-blur-0 group-hover:backdrop-blur-sm 
