--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     <link rel="stylesheet" href="./assets/style.css">
 
 </head>
-<body class="text-gray-800 overflow-x-hidden">
+< class="text-gray-800 overflow-x-hidden">
 
-  <!-- ✅ Navbar -->
+  <!--  Navbar -->
 <nav id="navbar" class="fixed top-0 w-full z-50 transition-all duration-300 py-4 bg-white shadow-md">
   <div class="container mx-auto px-4 flex items-center justify-between">
     <!-- Logo -->
@@ -117,7 +117,7 @@
   </div>
 </nav>
 
-<!-- ✅ Script -->
+<!--  Script -->
 <script>
   const menuBtn = document.getElementById("menu-btn");
   const mobileMenu = document.getElementById("mobile-menu");
@@ -128,7 +128,7 @@
   });
 </script>
 
-<!-- ✅ Animation -->
+<!--  Animation -->
 <style>
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(-10px); }
@@ -656,7 +656,7 @@
 
 
 
-<!-- ✨ سكشن رحلة النجاح -->
+<!--  سكشن رحلة النجاح -->
 <section class="relative bg-white py-24">
   <div class="container mx-auto px-6">
     <!-- العنوان -->
@@ -739,7 +739,7 @@
   </div>
 </section>
 
-<!-- ✨ سكشن شركاؤنا في النجاح -->
+<!--  سكشن شركاؤنا في النجاح -->
 <section class="bg-white py-24 relative">
   <div class="container mx-auto px-6">
     <!-- العنوان -->
