--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@
     }
     }
     </script>
-
-    
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -70,11 +68,11 @@
     <div class="container mx-auto px-4 flex items-center justify-between">
       <!-- Logo -->
       <div class="flex items-center space-x-reverse space-x-4">
-        <div class="bg-gradient-to-r from-blue-500 to-purple-600 text-white p-3 rounded-lg">
-          <i class="fas fa-bullhorn text-xl"></i>
+        <div class=" text-white p-3 rounded-lg w-14 h-14 flex items-center justify-center shadow-md rounded-full">
+          <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png" alt="">
         </div>
         <div>
-          <h2 class="text-xl font-bold gradient-text">الإبداع للدعاية والإعلان</h2>
+          <h2 class="text-xl font-bold gradient-text">ايجيبت للدعاية والإعلان</h2>
           <p class="text-sm text-gray-600">حلول إبداعية لنجاحك</p>
         </div>
       </div>
@@ -214,7 +212,7 @@
           <div class="prose prose-lg text-gray-700 leading-relaxed">
             <p class="text-lg mb-6">
               منذ تأسيسنا، آمنا بأن كل علامة تجارية لها قصة فريدة تستحق أن تُروى بطريقة استثنائية. في 
-              <strong class="text-blue-600">إبداع للدعاية والإعلان</strong>، نتجاوز حدود التقليد لنقدم حلولاً إبداعية متكاملة.
+              <strong class="text-blue-600">ايجبت للدعاية والإعلان</strong>، نتجاوز حدود التقليد لنقدم حلولاً إبداعية متكاملة.
             </p>
             <p class="text-lg mb-6">
               نحن لا نصنع إعلانات فحسب، بل نبني جسوراً من التواصل بين علامتك التجارية وجمهورك. نجمع بين الفن والعلم، بين الإبداع والاستراتيجية، لنحقق نتائج تفوق التوقعات.
@@ -438,7 +436,7 @@
     <!-- العنوان -->
     <div class="text-center mb-14">
       <h2 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">
-        لماذا تختار <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600">الإبداع؟</span>
+        لماذا تختار <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600">ايجبت؟</span>
       </h2>
       <p class="text-gray-600 max-w-2xl mx-auto text-lg">
         لأننا نصنع الفارق بين الإعلان العادي والإعلان الفاخر الذي يبقى في ذهن جمهورك.
@@ -662,7 +660,7 @@
     <!-- العنوان -->
     <div class="text-center mb-16">
       <h2 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">
-        رحلتك مع <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600">الإبداع</span>
+        رحلتك مع <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600">ايجبت</span>
       </h2>
       <p class="text-lg text-gray-600 max-w-3xl mx-auto">
         نحن لا نقدّم خدمة فقط، بل نصنع قصة نجاح متكاملة تبدأ من فكرتك حتى تصل إلى جمهورك بأرقى صورة ممكنة.
@@ -790,11 +788,11 @@
             <div class="grid lg:grid-cols-4 md:grid-cols-2 gap-12 mb-12">
                 <div>
                     <div class="flex items-center space-x-reverse space-x-3 mb-6">
-                        <div class="bg-gradient-to-r from-blue-500 to-purple-600 text-white p-2 rounded-lg">
-                            <i class="fas fa-bullhorn text-lg"></i>
+                         <div class=" text-white p-3 rounded-lg w-14 h-14 flex items-center justify-center shadow-md rounded-full border-white border-2 bg-white">
+                          <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png" alt="">
                         </div>
                         <div>
-                            <h3 class="text-xl font-bold">الإبداع للدعاية والإعلان</h3>
+                            <h3 class="text-xl font-bold">ايجبت للدعاية والإعلان</h3>
                             <p class="text-gray-400 text-sm">حلول إبداعية لنجاحك</p>
                         </div>
                     </div>
