--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
   <!-- Call To Action -->
   <div
-    class="relative bg-gradient-to-r from-blue-600 to-indigo-700 text-white py-10 px-6 rounded-2xl shadow-xl overflow-hidden my-12 animate-fadeInUp">
+    class="relative bg-gradient-to-r from-blue-600 to-indigo-700 text-white m-5 py-10 px-6 rounded-2xl shadow-xl overflow-hidden my-12 animate-fadeInUp">
     <div
       class="absolute top-0 left-0 w-full h-full opacity-20 bg-[url('https://www.toptal.com/designers/subtlepatterns/uploads/dot-grid.png')]">
     </div>
