--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <a href="#home" class="text-black hover:text-blue-600 transition-colors font-medium">الرئيسية</a>
       <a href="#about" class="text-black hover:text-blue-600 transition-colors font-medium">من نحن</a>
       <a href="#services" class="text-black hover:text-blue-600 transition-colors font-medium">خدماتنا</a>
-      <a href="#contact" class="text-black hover:text-blue-600 transition-colors font-medium">اتصل بنا</a>
+      <a href="#portfolio" class="text-black hover:text-blue-600 transition-colors font-medium"> اعمالنا</a>
     </div>
 
     <!-- CTA + Menu Button -->
@@ -111,7 +111,7 @@
       <a href="#home" class="text-black hover:text-blue-600 transition-colors font-medium">الرئيسية</a>
       <a href="#about" class="text-black hover:text-blue-600 transition-colors font-medium">من نحن</a>
       <a href="#services" class="text-black hover:text-blue-600 transition-colors font-medium">خدماتنا</a>
-      <a href="#contact" class="text-black hover:text-blue-600 transition-colors font-medium">اتصل بنا</a>
+      <a href="#portfolio" class="text-black hover:text-blue-600 transition-colors font-medium">اعمالنا</a>
       <a href="tel:+966501234567"
         class="inline-block bg-blue-600 text-white px-5 py-3 rounded-lg shadow-md hover:bg-blue-700 transition-colors">
         اتصل بنا
@@ -928,6 +928,73 @@
 
 </div>
 
+<section class="relative bg-gradient-to-r from-blue-50 to-purple-50 py-20 overflow-hidden">
+  <div class="container mx-auto px-6 md:px-12 lg:px-20">
+    
+    <!-- العنوان -->
+    <div class="text-center mb-16">
+      <h2 class="text-4xl md:text-5xl font-extrabold text-gray-900 mb-4 animate-fadeInDown">
+        لماذا <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600">الدعاية والإعلان</span> هي سر النجاح؟
+      </h2>
+      <p class="text-lg text-gray-700 max-w-3xl mx-auto animate-fadeInUp">
+        لأن الإعلان مش بس وسيلة للتعريف، هو البوابة اللي بتخلي مشروعك يتشاف، 
+        يترسخ في أذهان العملاء، ويتحول من فكرة بسيطة إلى <span class="font-bold text-blue-600">علامة تجارية قوية</span>.
+      </p>
+    </div>
+
+    <!-- المحتوى -->
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+      
+      <!-- كارت 1 -->
+      <div class="group bg-white rounded-2xl shadow-lg p-8 text-center hover:-translate-y-3 hover:shadow-2xl transition duration-500 animate-fadeInUp">
+        <div class="bg-gradient-to-r from-blue-500 to-purple-600 text-white w-20 h-20 flex items-center justify-center rounded-full mx-auto mb-6 group-hover:scale-110 transition">
+          <i class="fas fa-bullhorn text-3xl"></i>
+        </div>
+        <h3 class="text-xl font-bold text-gray-900 mb-4">زيادة الانتشار</h3>
+        <p class="text-gray-600">
+          إعلاناتك تخلي جمهورك يعرفك بسرعة وتوصل رسالتك لعدد أكبر من العملاء المحتملين.
+        </p>
+      </div>
+
+      <!-- كارت 2 -->
+      <div class="group bg-white rounded-2xl shadow-lg p-8 text-center hover:-translate-y-3 hover:shadow-2xl transition duration-500 animate-fadeInUp delay-200">
+        <div class="bg-gradient-to-r from-green-500 to-green-600 text-white w-20 h-20 flex items-center justify-center rounded-full mx-auto mb-6 group-hover:scale-110 transition">
+          <i class="fas fa-chart-line text-3xl"></i>
+        </div>
+        <h3 class="text-xl font-bold text-gray-900 mb-4">تعزيز المبيعات</h3>
+        <p class="text-gray-600">
+          كل إعلان ذكي بيترجم لزيادة في المبيعات وتحقيق نمو سريع في مشروعك.
+        </p>
+      </div>
+
+      <!-- كارت 3 -->
+      <div class="group bg-white rounded-2xl shadow-lg p-8 text-center hover:-translate-y-3 hover:shadow-2xl transition duration-500 animate-fadeInUp delay-400">
+        <div class="bg-gradient-to-r from-pink-500 to-red-600 text-white w-20 h-20 flex items-center justify-center rounded-full mx-auto mb-6 group-hover:scale-110 transition">
+          <i class="fas fa-lightbulb text-3xl"></i>
+        </div>
+        <h3 class="text-xl font-bold text-gray-900 mb-4">بناء العلامة التجارية</h3>
+        <p class="text-gray-600">
+          الإعلان القوي بيخلي اسمك يترسخ في أذهان الناس ويكسبك ثقة جمهورك.
+        </p>
+      </div>
+
+    </div>
+
+    <!-- صورة توضيحية -->
+    <div class="relative mt-20 flex justify-center animate-fadeInUp">
+      <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png" alt="أهمية الدعاية والإعلان" class="max-w-3xl rounded-2xl shadow-xl p-4 transform transition-transform duration-500 hover:scale-110">
+      <div class="absolute -top-10 -left-10 w-40 h-40 bg-blue-200 rounded-full mix-blend-multiply animate-pulse"></div>
+      <div class="absolute -bottom-10 -right-10 w-40 h-40 bg-purple-200 rounded-full mix-blend-multiply animate-pulse"></div>
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
+
 <div class="fixed bottom-6 left-6 flex flex-col space-y-4 z-50">
   <!-- زر الاتصال -->
   <a href="tel:+201234567890" 
@@ -1038,13 +1105,9 @@
     </div>
 
     <div class="border-t border-gray-800 pt-8">
-      <div class="flex flex-col md:flex-row justify-between items-center">
-        <p class="text-gray-400 text-sm mb-4 md:mb-0">© 2024 شركة الإبداع للدعاية والإعلان. جميع الحقوق محفوظة.</p>
-        <div class="flex space-x-reverse space-x-6 text-sm">
-          <a href="#" class="text-gray-400 hover:text-white transition-colors">شروط الاستخدام</a>
-          <a href="#" class="text-gray-400 hover:text-white transition-colors">سياسة الخصوصية</a>
-          <a href="#" class="text-gray-400 hover:text-white transition-colors">سياسة الكوكيز</a>
-        </div>
+      <div class="flex flex-col md:flex-row  items-center text-center m-auto">
+        <p class="text-gray-400 text-sm mb-4 md:mb-0">© 2025 شركة <a href="https://www.fashne.net/">FASHNE</a>. جميع الحقوق محفوظة.</p>
+
       </div>
     </div>
   </div>
