--- a/index.html
+++ b/index.html
@@ -1187,7 +1187,7 @@
         <div class="space-y-4">
           <div class="flex items-center space-x-reverse space-x-3">
             <i class="fas fa-map-marker-alt text-primary"></i>
-            <span class="text-gray-300">الرياض، المملكة العربية السعودية</span>
+            <span class="text-gray-300">جدة، المملكة العربية السعودية</span>
           </div>
           <div class="flex items-center space-x-reverse space-x-3">
             <i class="fas fa-phone text-primary"></i>
