حفظ تعديلاتي على index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- ====== SEO ====== -->
-  <title>ايجبت للدعاية والإعلان - وكالة إبداعية لحلول التسويق</title>
+  <title>ايجبت للدعاية والإعلان في جدة - افضل شركة دعاية واعلان في جدة </title>
   <meta name="description"
     content="ايجبت للدعاية والإعلان تقدم حلول مبتكرة في التسويق، تصميم الحملات الإعلانية، الإنتاج المرئي، تصميم الشعارات والهويات البصرية لتعزيز نجاح علامتك التجارية.">
   <meta name="keywords"
@@ -18,7 +18,7 @@
 
   <!-- ====== Open Graph / Facebook ====== -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="ايجبت للدعاية والإعلان - وكالة إبداعية لحلول التسويق">
+  <meta property="og:title" content="ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة">
   <meta property="og:description"
     content="حلول مبتكرة في التسويق والإعلان، تصميم الحملات الإعلانية والهويات البصرية والمحتوى المرئي لتعزيز نجاح علامتك التجارية.">
   <meta property="og:image" content="https://example.com/ass/img/og-image.jpg">
@@ -27,7 +27,7 @@
 
   <!-- ====== Twitter Card ====== -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="ايجبت للدعاية والإعلان - وكالة إبداعية لحلول التسويق">
+  <meta name="twitter:title" content="ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة">
   <meta name="twitter:description"
     content="حلول مبتكرة في التسويق والإعلان، تصميم الحملات الإعلانية والهويات البصرية والمحتوى المرئي لتعزيز نجاح علامتك التجارية.">
   <meta name="twitter:image" content="https://example.com/ass/img/og-image.jpg">
