--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- ====== SEO ====== -->
-  <title>ايجبت للدعاية والإعلان - وكالة إبداعية لحلول التسويق</title>
+  <title>ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة</title>
   <meta name="description"
-    content="الإبداع للدعاية والإعلان تقدم حلول مبتكرة في التسويق، تصميم الحملات الإعلانية، الإنتاج المرئي، تصميم الشعارات والهويات البصرية لتعزيز نجاح علامتك التجارية.">
+    content="ايجبت للدعاية والإعلان تقدم حلول مبتكرة في التسويق، تصميم الحملات الإعلانية، الإنتاج المرئي، تصميم الشعارات والهويات البصرية لتعزيز نجاح علامتك التجارية.">
   <meta name="keywords"
     content="دعاية وإعلان, وكالة تسويق, تصميم لوجوهات, إنتاج محتوى, حملات إعلانية, SEO, هوية بصرية, سوشيال ميديا, مطبوعات دعائية">
-  <meta name="author" content="الإبداع للدعاية والإعلان">
+  <meta name="author" content="ايجبت للدعاية والإعلان">
 
   <!-- ====== Open Graph / Facebook ====== -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="الإبداع للدعاية والإعلان - وكالة إبداعية لحلول التسويق">
+  <meta property="og:title" content="ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة">
   <meta property="og:description"
     content="حلول مبتكرة في التسويق والإعلان، تصميم الحملات الإعلانية والهويات البصرية والمحتوى المرئي لتعزيز نجاح علامتك التجارية.">
   <meta property="og:image" content="https://example.com/ass/img/og-image.jpg">
   <meta property="og:url" content="https://example.com">
-  <meta property="og:site_name" content="الإبداع للدعاية والإعلان">
+  <meta property="og:site_name" content="ايجبت للدعاية والإعلان">
 
   <!-- ====== Twitter Card ====== -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="الإبداع للدعاية والإعلان - وكالة إبداعية لحلول التسويق">
+  <meta name="twitter:title" content="ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة">
   <meta name="twitter:description"
     content="حلول مبتكرة في التسويق والإعلان، تصميم الحملات الإعلانية والهويات البصرية والمحتوى المرئي لتعزيز نجاح علامتك التجارية.">
   <meta name="twitter:image" content="https://example.com/ass/img/og-image.jpg">
@@ -42,7 +42,7 @@
     {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "الإبداع للدعاية والإعلان",
+    "name": "ايجبت للدعاية والإعلان",
     "url": "https://example.com",
     "logo": "https://example.com/ass/img/logo.png",
     "sameAs": [
@@ -268,7 +268,7 @@
             </p>
             <p class="text-lg mb-6">
               نحن لا نصنع إعلانات فحسب، بل نبني جسوراً من التواصل بين علامتك التجارية وجمهورك. نجمع بين الفن والعلم، بين
-              الإبداع والاستراتيجية، لنحقق نتائج تفوق التوقعات.
+              ايجبت والاستراتيجية، لنحقق نتائج تفوق التوقعات.
             </p>
           </div>
 
@@ -664,7 +664,7 @@
       <div class="text-center mb-12">
         <h2 class="text-4xl font-bold text-gray-800 mb-4">
           أعمالنا <span
-            class="bg-gradient-to-r from-primary to-primary bg-clip-text text-transparent">الإبداعية</span>
+            class="bg-gradient-to-r from-primary to-primary bg-clip-text text-transparent">ايجبتية</span>
         </h2>
         <p class="text-gray-600 max-w-2xl mx-auto">
           مجموعة من أبرز التصاميم التي نفذناها لعملائنا في مجالات متعددة: لوجوهات، إعلانات، دعوات، وبوسترات دعائية.
@@ -840,7 +840,7 @@
             <i class="fas fa-brain text-2xl"></i>
           </div>
           <div>
-            <h3 class="text-2xl font-bold text-gray-900">الفكرة والإبداع</h3>
+            <h3 class="text-2xl font-bold text-gray-900">الفكرة وايجبت</h3>
             <p class="text-gray-600 mt-2">
               نجلس معك لفهم أهدافك ورؤيتك، ثم نصوغها في فكرة إبداعية تحمل بصمة فريدة لعلامتك التجارية.
             </p>
@@ -946,7 +946,7 @@
             class="text-primary bg-clip-text bg-gradient-to-r from-primary to-primary">النجاح</span>
         </h2>
         <p class="text-lg text-gray-600 max-w-2xl mx-auto">
-          نفتخر بثقة عملائنا الذين شاركونا قصص نجاح ملهمة، وتركنا بصمتنا الإبداعية في مشاريعهم.
+          نفتخر بثقة عملائنا الذين شاركونا قصص نجاح ملهمة، وتركنا بصمتنا ايجبتية في مشاريعهم.
         </p>
       </div>
 
