change about section

--- a/index.html
+++ b/index.html
@@ -253,23 +253,36 @@
         </h2>
         <div class="w-24 h-1 bg-gradient-to-r from-primary to-primary-dark mx-auto mb-6 rounded-full"></div>
         <p class="text-xl text-gray-600 max-w-3xl mx-auto leading-relaxed">
-          نحن فريق من المبدعين والاستراتيجيين المتخصصين في صناعة المحتوى الدعائي المؤثر
-        </p>
+  نحن شركة <span class="font-bold text-gray-800">إيچبت للإعلان والدعاية في جدة</span>، 
+ 
+  الذي يساعد عملاءنا على الوصول إلى جمهورهم المستهدف بأفضل الطرق الإبداعية.
+</p>
+
       </div>
 
       <div class="grid lg:grid-cols-2 gap-16 items-center">
         <!-- Content -->
         <div class="space-y-8">
           <div class="prose prose-lg text-gray-700 leading-relaxed">
-            <p class="text-lg mb-6">
-              منذ تأسيسنا، آمنا بأن كل علامة تجارية لها قصة فريدة تستحق أن تُروى بطريقة استثنائية. في
-              <strong class="text-primary">ايجبت للدعاية والإعلان</strong>، نتجاوز حدود التقليد لنقدم حلولاً إبداعية
-              متكاملة.
-            </p>
-            <p class="text-lg mb-6">
-              نحن لا نصنع إعلانات فحسب، بل نبني جسوراً من التواصل بين علامتك التجارية وجمهورك. نجمع بين الفن والعلم، بين
-              ايجبت والاستراتيجية، لنحقق نتائج تفوق التوقعات.
-            </p>
+          <p class="text-lg mb-6">
+<p class="text-lg mb-6">
+  في <strong class="text-primary">إيچبت للدعاية والإعلان</strong>، نؤمن أن النجاح يبدأ من الإبداع 
+  وينمو مع الاستراتيجية. نحن لسنا مجرد شركة دعائية، بل شريك حقيقي لعملائنا في رحلتهم نحو التميز.
+</p>
+
+<p class="text-lg mb-6">
+  بفضل خبرتنا العميقة وفريقنا المبدع، أصبحنا من افضل شركات الإعلان في جدة، حيث نجحنا في بناء سمعة 
+  قوية قائمة على الثقة والجودة والابتكار.
+</p>
+
+<p class="text-lg mb-6">
+  نحن نتميز بشكل خاص في مجال <strong class="text-primary">التسويق الإلكتروني</strong>، حيث ندمج 
+  بين التقنيات الحديثة وفهمنا العميق لسلوك الجمهور، لنصنع استراتيجيات مؤثرة تحقق نتائج ملموسة 
+  وتضع عملاءنا في صدارة المنافسة.
+</p>
+
+
+
           </div>
 
           <!-- Values -->
