--- a/index.html
+++ b/index.html
@@ -4,62 +4,50 @@
 <head>
 
   <!-- ====== Meta Tags ====== -->
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- ====== SEO ====== -->
-  <title>ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة</title>
-  <meta name="description"
-    content="ايجبت للدعاية والإعلان تقدم حلول مبتكرة في التسويق، تصميم الحملات الإعلانية، الإنتاج المرئي، تصميم الشعارات والهويات البصرية لتعزيز نجاح علامتك التجارية.">
-  <meta name="keywords"
-    content="دعاية وإعلان, وكالة تسويق, تصميم لوجوهات, إنتاج محتوى, حملات إعلانية, SEO, هوية بصرية, سوشيال ميديا, مطبوعات دعائية">
-  <meta name="author" content="ايجبت للدعاية والإعلان">
+<!-- ====== SEO ====== -->
+<title>ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة</title>
+<meta name="description"
+  content="ايجبت للدعاية والإعلان تقدم حلول مبتكرة في التسويق، تصميم الحملات الإعلانية، الإنتاج المرئي، تصميم الشعارات والهويات البصرية لتعزيز نجاح علامتك التجارية.">
+<meta name="keywords"
+  content="دعاية وإعلان, وكالة تسويق, تصميم لوجوهات, إنتاج محتوى, حملات إعلانية, SEO, هوية بصرية, سوشيال ميديا, مطبوعات دعائية">
+<meta name="author" content="ايجبت للدعاية والإعلان">
 
-  <!-- ====== Open Graph / Facebook ====== -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة">
-  <meta property="og:description"
-    content="حلول مبتكرة في التسويق والإعلان، تصميم الحملات الإعلانية والهويات البصرية والمحتوى المرئي لتعزيز نجاح علامتك التجارية.">
-  <meta property="og:image" content="https://example.com/ass/img/og-image.jpg">
-  <meta property="og:url" content="https://example.com">
-  <meta property="og:site_name" content="ايجبت للدعاية والإعلان">
+<!-- ====== Open Graph / Facebook ====== -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة">
+<meta property="og:description"
+  content="حلول مبتكرة في التسويق والإعلان، تصميم الحملات الإعلانية والهويات البصرية والمحتوى المرئي لتعزيز نجاح علامتك التجارية.">
+<meta property="og:image" content="https://creativity-omega.vercel.app/assets/img/og-image.jpg">
+<meta property="og:url" content="https://creativity-omega.vercel.app/">
+<meta property="og:site_name" content="ايجبت للدعاية والإعلان">
 
-  <!-- ====== Twitter Card ====== -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة">
-  <meta name="twitter:description"
-    content="حلول مبتكرة في التسويق والإعلان، تصميم الحملات الإعلانية والهويات البصرية والمحتوى المرئي لتعزيز نجاح علامتك التجارية.">
-  <meta name="twitter:image" content="https://example.com/ass/img/og-image.jpg">
-  <meta name="twitter:site" content="@YourTwitterHandle">
+<!-- ====== Twitter Card ====== -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة">
+<meta name="twitter:description"
+  content="حلول مبتكرة في التسويق والإعلان، تصميم الحملات الإعلانية والهويات البصرية والمحتوى المرئي لتعزيز نجاح علامتك التجارية.">
+<meta name="twitter:image" content="https://creativity-omega.vercel.app/assets/img/og-image.jpg">
+<meta name="twitter:site" content="@YourTwitterHandle">
 
-  <!-- ====== Favicon ====== -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<!-- ====== Favicon ====== -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
-  <!-- ====== Structured Data (JSON-LD) ====== -->
-  <script type="application/ld+json">
-    {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "ايجبت للدعاية والإعلان",
-    "url": "https://example.com",
-    "logo": "https://example.com/ass/img/logo.png",
-    "sameAs": [
-        "https://www.facebook.com/YourPage",
-        "https://twitter.com/YourTwitterHandle",
-        "https://www.instagram.com/YourInstagramHandle",
-        "https://www.linkedin.com/company/YourCompany"
-    ],
-    "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+966501234567",
-        "contactType": "customer service",
-        "areaServed": "SA",
-        "availableLanguage": ["Arabic", "English"]
-    }
-    }
-    </script>
+<!-- ====== Structured Data (JSON-LD) ====== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "ايجبت للدعاية والإعلان",
+  "url": "https://creativity-omega.vercel.app",
+  "logo": "https://creativity-omega.vercel.app/assets/img/logo.png"
+}
+</script>
+
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
