--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <div
       class="hero-slide slide-2 absolute inset-0 flex items-center justify-center transition-opacity duration-1000 opacity-0">
       <div class="hero-overlay"></div>
-      <div class="hero-content text-center text-white px-4">
+      <div class="hero-content text-center text-white px-4 ">
         <div class="fade-in">
           <h1 class="text-5xl lg:text-7xl font-bold mb-6">تميز في كل حملة</h1>
           <p class="text-xl lg:text-2xl mb-8 max-w-3xl mx-auto">خبرة تزيد عن 10 سنوات في صناعة الإعلان والتسويق الرقمي
@@ -208,7 +208,7 @@
   </div>
 
   <!-- Slider Controls -->
-  <div class="absolute bottom-8 left-1/2 transform -translate-x-1/2 flex space-x-2 z-20">
+  <div class="absolute bottom-8 left-1/2 transform -translate-x-1/2 flex space-x-2 z-20" dir="ltr">
     <button class="slider-dot w-3 h-3 rounded-full bg-white opacity-50 transition-opacity" data-slide="0"></button>
     <button class="slider-dot w-3 h-3 rounded-full bg-white opacity-50 transition-opacity" data-slide="1"></button>
     <button class="slider-dot w-3 h-3 rounded-full bg-white opacity-50 transition-opacity" data-slide="2"></button>
