--- a/index.html
+++ b/index.html
@@ -637,10 +637,10 @@
         <!-- الصور -->
         <div class="grid grid-cols-2 gap-6">
           <div class="rounded-2xl overflow-hidden shadow-lg transform hover:scale-105 transition duration-500">
-            <img src="./assets/img/hero-1.jpg" alt="اعلان فاخر" class="w-full h-full object-cover">
+            <img src="./assets/img/hero-1.png" alt="اعلان فاخر" class="w-full h-full object-cover">
           </div>
           <div class="rounded-2xl overflow-hidden shadow-lg transform hover:scale-105 transition duration-500 mt-10">
-            <img src="./assets/img/hero-3.jpg" alt="تصميم براند" class="w-full h-full object-cover">
+            <img src="./assets/img/hero-2.png" alt="تصميم براند" class="w-full h-full object-cover">
           </div>
         </div>
       </div>
@@ -656,7 +656,7 @@
       <div class="text-center mb-12">
         <h2 class="text-4xl font-bold text-gray-800 mb-4">
           أعمالنا <span
-            class="bg-gradient-to-r from-primary to-primary bg-clip-text text-transparent">ايجبتية</span>
+            class="bg-gradient-to-r from-primary to-primary bg-clip-text text-transparent">المبتكرة</span>
         </h2>
         <p class="text-gray-600 max-w-2xl mx-auto">
           مجموعة من أبرز التصاميم التي نفذناها لعملائنا في مجالات متعددة: لوجوهات، إعلانات، دعوات، وبوسترات دعائية.
@@ -693,7 +693,7 @@
         <!-- Card 2 -->
         <div
           class="group relative overflow-hidden rounded-2xl shadow-lg transform transition-all duration-500 hover:scale-105 hover:shadow-2xl">
-          <img src="./assets/img/Advertisement.jpg" alt="إعلان دعائي"
+          <img src="./assets/img/hero-1.png" alt="إعلان دعائي"
             class="w-full h-64 object-cover transition-all duration-500 group-hover:scale-110">
           <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-500"></div>
           <div class="absolute inset-0 bg-black/0 group-hover:bg-black/20 backdrop-blur-0 group-hover:backdrop-blur-sm 
@@ -701,10 +701,10 @@
             <div class="text-center transform translate-y-8 group-hover:translate-y-0 opacity-0 group-hover:opacity-100 
                       transition-all duration-500 delay-200">
               <h3 class="text-2xl text-white font-bold mb-3 drop-shadow-lg">
-                إعلان دعائي
+                تصميم وتنفيذ واجهات كلادينج
               </h3>
               <p class="text-sm text-white font-bold leading-relaxed drop-shadow-md">
-                حملات إعلانية مبتكرة لزيادة الوعي وجذب الجمهور المستهدف بأفكار خلاقة
+                حلول متكاملة لتصميم وتركيب واجهات كلادينج بجودة عالية، مواد مقاومة للعوامل الجوية
               </p>
               <div class="mt-4">
 
@@ -1081,21 +1081,19 @@
         <p class="text-gray-300 mb-6">نحن شريكك الموثوق في رحلة النجاح، نقدم حلول إعلانية وتسويقية متميزة تحقق أهدافك
           وتبني علامتك التجارية.</p>
         <div class="flex space-x-reverse space-x-4">
-          <a href="#" class="bg-primary hover:bg-primary p-3 px-4 rounded-full transition-colors">
+          <a href="https://www.facebook.com/people/%D8%A7%D9%8A%D8%AC%D8%A8%D8%AA-%D9%84%D9%84%D8%AF%D8%B9%D8%A7%D9%8A%D8%A9-%D9%88%D8%A7%D9%84%D8%A5%D8%B9%D9%84%D8%A7%D9%86/61580300744080/" class="bg-blue-600 hover:bg-blue-600 p-3 px-4 rounded-full transition-colors">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#" class="bg-pink-600 hover:bg-pink-700 p-3 px-4 rounded-full transition-colors">
+          <a href="https://www.instagram.com/egypt.advertising/" class="bg-pink-600 hover:bg-pink-700 p-3 px-4 rounded-full transition-colors">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="#" class="bg-primary hover:bg-primary p-3 px-4 rounded-full transition-colors">
+          <a href="https://x.com/egyptadvertisin" class="bg-blue-500 hover:bg-blue-500 p-3 px-4 rounded-full transition-colors">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#" class="bg-primary-800 hover:bg-primary-900 p-3 px-4 rounded-full transition-colors">
-            <i class="fab fa-linkedin-in"></i>
+          <a href="https://www.tiktok.com/@egypt.advertising?lang=ar" class="bg-primary-800 hover:bg-primary-900 p-3 px-4 rounded-full transition-colors">
+            <i class="fab fa-tiktok"></i>
           </a>
-          <a href="#" class="bg-red-600 hover:bg-red-700 p-3 px-4 rounded-full transition-colors">
-            <i class="fab fa-youtube"></i>
-          </a>
+          
         </div>
       </div>
 
@@ -1138,7 +1136,7 @@
         <div class="space-y-4">
           <div class="flex items-center space-x-reverse space-x-3">
             <i class="fas fa-map-marker-alt text-primary"></i>
-            <span class="text-gray-300">الرياض، المملكة العربية السعودية</span>
+            <span class="text-gray-300">جدة، المملكة العربية السعودية</span>
           </div>
           <div class="flex items-center space-x-reverse space-x-3">
             <i class="fas fa-phone text-primary"></i>
@@ -1146,7 +1144,7 @@
           </div>
           <div class="flex items-center space-x-reverse space-x-3">
             <i class="fas fa-envelope text-primary"></i>
-            <span class="text-gray-300" dir="ltr">info@creativead.com</span>
+            <span class="text-gray-300" dir="ltr">egyptforadvertising25@gmail.com</span>
           </div>
           <div class="flex items-center space-x-reverse space-x-3">
             <i class="fas fa-clock text-primary"></i>
