--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
           </div>
 
           <!-- العنوان -->
-          <h3 class="text-xl font-bold mb-4">تصميم وتنفيذ اللوحات الإعلانية والمضيئة</h3>
+          <h3 class="text-xl font-bold mb-4">تصميم وتنفيذ اللوحات الإعلانية المضيئة</h3>
 
           <!-- الوصف -->
           <p class="text-gray-600 mb-6">
