--- a/index.html
+++ b/index.html
@@ -167,9 +167,13 @@
           <h1 class="text-5xl lg:text-7xl font-bold mb-6">إبداع لا حدود له</h1>
           <p class="text-xl lg:text-2xl mb-8 max-w-3xl mx-auto">نحول أفكارك إلى حملات إعلانية مؤثرة تحقق النجاح
             والانتشار</p>
-          <button
-            class="bg-white text-blue-600 px-8 py-4 rounded-full font-bold text-lg hover:bg-gray-100 transition-colors">ابدأ
-            مشروعك</button>
+         <a href="tel:+966501234567">
+            <button
+              class="bg-white text-blue-600 px-8 py-4 rounded-full font-bold text-lg hover:bg-gray-100 transition-colors">
+              ابدأ مشروعك
+            </button>
+          </a>
+
         </div>
       </div>
     </div>
@@ -183,9 +187,11 @@
           <h1 class="text-5xl lg:text-7xl font-bold mb-6">تميز في كل حملة</h1>
           <p class="text-xl lg:text-2xl mb-8 max-w-3xl mx-auto">خبرة تزيد عن 10 سنوات في صناعة الإعلان والتسويق الرقمي
           </p>
+          <a href="tel:+966501234567">
           <button
             class="bg-white text-pink-600 px-8 py-4 rounded-full font-bold text-lg hover:bg-gray-100 transition-colors">استكشف
             أعمالنا</button>
+            </a>
         </div>
       </div>
     </div>
@@ -199,9 +205,11 @@
           <h1 class="text-5xl lg:text-7xl font-bold mb-6">نجاحك هو هدفنا</h1>
           <p class="text-xl lg:text-2xl mb-8 max-w-3xl mx-auto">شريكك الموثوق لتحقيق أهدافك التسويقية وبناء علامتك
             التجارية</p>
+            <a href="tel:+966501234567">
           <button
             class="bg-white text-blue-500 px-8 py-4 rounded-full font-bold text-lg hover:bg-gray-100 transition-colors">تواصل
             معنا</button>
+            </a>
         </div>
       </div>
     </div>
@@ -385,7 +393,7 @@
 
           <!-- زر الاتصال -->
           <div class="text-center">
-            <a href="tel:+201234567890"
+            <a href="tel:+965501234567"
               class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
               <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
             </a>
@@ -416,7 +424,7 @@
 
           <!-- زر الاتصال -->
           <div class="text-center">
-            <a href="tel:+201234567890"
+            <a href="tel:+965501234567"
               class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
               <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
             </a>
@@ -454,7 +462,7 @@
 
           <!-- زر الاتصال -->
           <div class="text-center">
-            <a href="tel:+201234567890"
+            <a href="tel:+965501234567"
               class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
                 <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
               </a>
@@ -488,10 +496,10 @@
 
           <!-- زر الاتصال -->
           <div class="text-center">
-            <a href="tel:+201234567890"
-              class="bg-gradient-to-r from-blue-500 to-blue-600 text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
-              <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
-            </a>
+             <a href="tel:+965501234567"
+              class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
+                <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+              </a>
           </div>
         </div>
 
@@ -523,10 +531,10 @@
 
           <!-- زر الاتصال -->
           <div class="text-center">
-            <a href="tel:+201234567890"
-              class="bg-gradient-to-r from-blue-500 to-blue-600 text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
-              <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
-            </a>
+              <a href="tel:+965501234567"
+              class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
+                <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+              </a>
           </div>
         </div>
 
@@ -1051,13 +1059,13 @@
 
 <div class="fixed bottom-6 left-6 flex flex-col space-y-4 z-50">
   <!-- زر الاتصال -->
-  <a href="tel:+201234567890" 
+  <a href="tel:+965501234567" 
      class="bg-gradient-to-r from-primary to-primary text-white w-14 h-14 rounded-full shadow-lg hover:scale-110 transform transition flex items-center justify-center">
     <i class="fas fa-phone-alt text-2xl"></i>
   </a>
 
   <!-- زر الواتساب -->
-  <a href="https://wa.me/201234567890" target="_blank"
+  <a href="https://wa.me/966501234567" target="_blank"
      class="bg-green-500 text-white w-14 h-14 rounded-full shadow-lg hover:scale-110 transform transition flex items-center justify-center">
     <i class="fab fa-whatsapp text-2xl"></i>
   </a>
@@ -1140,7 +1148,11 @@
           </div>
           <div class="flex items-center space-x-reverse space-x-3">
             <i class="fas fa-phone text-primary"></i>
-            <span class="text-gray-300" dir="ltr">+966 50 123 4567</span>
+            <span class="text-gray-300" dir="ltr">+966 563374482</span>
+          </div>
+          <div class="flex items-center space-x-reverse space-x-3">
+            <i class="fas fa-phone text-primary"></i>
+            <span class="text-gray-300" dir="ltr">+966 565265233</span>
           </div>
           <div class="flex items-center space-x-reverse space-x-3">
             <i class="fas fa-envelope text-primary"></i>
@@ -1158,7 +1170,7 @@
 
     <div class="border-t border-gray-800 pt-8">
       <div class="flex flex-col md:flex-row  items-center text-center m-auto">
-        <p class="text-gray-400 text-sm mb-4 md:mb-0">© 2025 شركة <a href="https://www.fashne.net/">FASHNE</a>. جميع الحقوق محفوظة.</p>
+        <p class="text-gray-400 text-sm mb-4 md:mb-0">© 2025 شركة <a href="https://www.fashne.net/">Alfashne</a>. جميع الحقوق محفوظة.</p>
 
       </div>
     </div>
