--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png" alt="">
       </div>
       <div>
-        <h2 class="text-xl font-bold gradient-text">ايجيبت للدعاية والإعلان</h2>
+        <h2 class="text-xl font-bold gradient-text">ايجبت للدعاية والإعلان</h2>
         <p class="text-sm text-gray-600">حلول إبداعية لنجاحك</p>
       </div>
     </div>
@@ -240,7 +240,7 @@
         </h2>
         <div class="w-24 h-1 bg-gradient-to-r from-primary to-primary-dark mx-auto mb-6 rounded-full"></div>
         <p class="text-xl text-gray-600 max-w-3xl mx-auto leading-relaxed">
-  نحن شركة <span class="font-bold text-gray-800">إيچبت للإعلان والدعاية في جدة</span>، 
+  نحن شركة <span class="font-bold text-gray-800">ايجبتللإعلان والدعاية في جدة</span>، 
  
   الذي يساعد عملاءنا على الوصول إلى جمهورهم المستهدف بأفضل الطرق الإبداعية.
 </p>
@@ -253,7 +253,7 @@
           <div class="prose prose-lg text-gray-700 leading-relaxed">
           <p class="text-lg mb-6">
 <p class="text-lg mb-6">
-  في <strong class="text-primary">إيچبت للدعاية والإعلان</strong>، نؤمن أن النجاح يبدأ من الإبداع 
+  في <strong class="text-primary">ايجبت للدعاية والإعلان</strong>، نؤمن أن النجاح يبدأ من الإبداع 
   وينمو مع الاستراتيجية. نحن لسنا مجرد شركة دعائية، بل شريك حقيقي لعملائنا في رحلتهم نحو التميز.
 </p>
 
@@ -1044,7 +1044,7 @@
 
     <!-- صورة توضيحية -->
     <div class="relative mt-20 flex justify-center animate-fadeInUp">
-      <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png" alt="أهمية الدعاية والإعلان" class="max-w-3xl rounded-2xl shadow-xl p-4 transform transition-transform duration-500 hover:scale-110">
+      <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png " alt="أهمية الدعاية والإعلان" class="max-w-3xl rounded-2xl shadow-xl p-4 transform transition-transform duration-500 hover:scale-110">
       <div class="absolute -top-10 -left-10 w-40 h-40 bg-primary-200 rounded-full mix-blend-multiply animate-pulse"></div>
       <div class="absolute -bottom-10 -right-10 w-40 h-40 bg-primary-100 rounded-full mix-blend-multiply animate-pulse"></div>
     </div>
@@ -1079,7 +1079,7 @@
         <div class="flex items-center space-x-reverse space-x-3 mb-6">
           <div
             class=" text-white p-3 rounded-lg w-14 h-14 flex items-center justify-center shadow-md rounded-full border-white border-2 bg-white">
-            <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png" alt="">
+            <img src="./assets/img/ايجبتللدعاية والاعلان 1.png" alt="">
           </div>
           <div>
             <h3 class="text-xl font-bold">ايجبت للدعاية والإعلان</h3>
