change about section

--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
         </h2>
         <div class="w-24 h-1 bg-gradient-to-r from-primary to-primary-dark mx-auto mb-6 rounded-full"></div>
         <p class="text-xl text-gray-600 max-w-3xl mx-auto leading-relaxed">
-  نحن شركة <span class="font-bold text-gray-800">ايجبتللإعلان والدعاية في جدة</span>، 
+  نحن شركة <span class="font-bold text-gray-800">ايجبت للإعلان والدعاية في جدة</span>، 
  
-  الذي يساعد عملاءنا على الوصول إلى جمهورهم المستهدف بأفضل الطرق الإبداعية.
+   نساعد عملاءنا على الوصول إلى جمهورهم والظهور بمظهر يليق بهم بافضل الطرق الإبداعية.
 </p>
 
       </div>
@@ -250,29 +250,39 @@
       <div class="grid lg:grid-cols-2 gap-16 items-center">
         <!-- Content -->
         <div class="space-y-8">
-          <div class="prose prose-lg text-gray-700 leading-relaxed">
-          <p class="text-lg mb-6">
-<p class="text-lg mb-6">
-  في <strong class="text-primary">ايجبت للدعاية والإعلان</strong>، نؤمن أن النجاح يبدأ من الإبداع 
-  وينمو مع الاستراتيجية. نحن لسنا مجرد شركة دعائية، بل شريك حقيقي لعملائنا في رحلتهم نحو التميز.
-</p>
+<div class="prose prose-lg text-gray-700 leading-relaxed">
+  <p class="text-lg mb-6">
+    في <strong class="text-primary">ايجبت للدعاية والإعلان</strong>، نؤمن أن النجاح يبدأ من الإبداع 
+    وينمو مع الاستراتيجية. نحن لسنا مجرد شركة دعائية، بل شريك حقيقي لعملائنا في رحلتهم نحو التميز.
+  </p>
 
-<p class="text-lg mb-6">
-  بفضل خبرتنا العميقة وفريقنا المبدع، أصبحنا من افضل شركات الإعلان في جدة، حيث نجحنا في بناء سمعة 
-  قوية قائمة على الثقة والجودة والابتكار.
-</p>
+  <p class="text-lg mb-6">
+    بفضل خبرتنا العميقة وفريقنا المبدع، أصبحنا من افضل شركات الإعلان في جدة، حيث نجحنا في بناء سمعة 
+    قوية قائمة على الثقة والجودة والابتكار.
+  </p>
 
-<p class="text-lg mb-6">
-  نحن نتميز بشكل خاص في مجال <strong class="text-primary">التسويق الإلكتروني</strong>، حيث ندمج 
-  بين التقنيات الحديثة وفهمنا العميق لسلوك الجمهور، لنصنع استراتيجيات مؤثرة تحقق نتائج ملموسة 
-  وتضع عملاءنا في صدارة المنافسة.
-</p>
+  <p class="text-lg mb-6">
+    نحن نتميز بشكل خاص في مجال <strong class="text-primary">الدعاية والإعلان والتسويق الإلكتروني</strong>، حيث ندمج 
+    بين التقنيات الحديثة وفهمنا العميق لسلوك الجمهور، لنصنع استراتيجيات مؤثرة تحقق نتائج ملموسة 
+    وتضع عملاءنا في صدارة المنافسة.
+  </p>
+
+  <!-- النص الجديد -->
+  <p class="text-lg mb-6">
+    نقدم حلولاً متكاملة تبدأ من تصميم الهوية البصرية، وكتابة المحتوى الإبداعي، وصولاً إلى إدارة الحملات الإعلانية 
+    على مختلف المنصات الرقمية مثل <strong class="text-primary">فيسبوك</strong>، <strong class="text-primary">إنستجرام</strong>، و<strong class="text-primary">جوجل</strong>. 
+    هدفنا هو مساعدتك في الوصول إلى جمهورك المستهدف بأفضل الطرق وأكثرها تأثيرًا، مع تحقيق 
+    <span class="font-semibold text-primary">أعلى عائد استثماري</span> لحملاتك.
+  </p>
+
+  <p class="text-lg">
+    في عالم سريع التغير، نحن شريكك الذي يضمن لك التواجد القوي والفعّال، 
+    لنساعد علامتك التجارية على الظهور بمظهر يليق بها ويحقق أهدافك التسويقية.
+  </p>
+</div>
 
 
-
-          </div>
-
-          <!-- Values -->
+          <!-- Values
           <div class="grid md:grid-cols-2 gap-6">
             <div
               class="bg-gradient-to-br from-primary-light to-primary-light p-6 rounded-2xl shadow-md hover:shadow-lg transition">
@@ -321,7 +331,7 @@
                 الانتباه.</p>
 
             </div>
-          </div>
+          </div> -->
         </div>
 
         <!-- Image/Visual -->
