--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/x-icon" href="./assets/img/ايجيبت للدعاية والاعلان 1.png">
+
 
 <!-- ====== SEO ====== -->
 <title>ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة</title>
@@ -42,7 +44,7 @@
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <style>
     /* تعريف الألوان المخصصة */
     :root {
@@ -867,7 +869,7 @@
 
         <!-- خطوة 2 -->
         <div class="mb-16 ml-10 flex items-start space-x-reverse space-x-6">
-          <div class="bg-gradient-to-r from-blue-500 to-purple-600 text-white p-5 rounded-full shadow-lg">
+          <div class="bg-gradient-to-r from-primary to-primary-dark text-white p-5 rounded-full shadow-lg">
             <i class="fas fa-paint-brush text-2xl"></i>
           </div>
           <div>
@@ -1145,7 +1147,7 @@
   </div>
 </footer>
 
-<script src="./assets/script.js"></script>
+<script src="./assets/js/script.js"></script>
 </body>
 
 </html>
